--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
+
 <html>
-     <head>
 
-
-
-
-     </head>  
+<head>
+   <title>BA DEGHAT BEKHOON</title>
+</head>
 <body>
-<h1> mikhastam behet begam cheghadr emrooz khoshgel shode boodi,delam koli barat tang shode bood dige bishtar az in nemitoonestam sabr konam ke nabinamet inam hamun goli bood ke gharar bood ke vase tavalodet begiram ba kadot valiii kado pishe an mimoone hanooz dorost kamel nashode kholase inke midoonestam age khodam begam behet ke ghatan nemiay bebinamet in tanha rahi bood ke be zehnam resid kolii duset daraam khoshgele man moraghebe khodet bash nimvajabi.</h1>
+   <h1>faghat khastam begam cheghadr khoshgel shode boodi midonestam hich rahi nist vase inke biam bebinamet vali in tanha rahi boood ke mitoonestam dobare bebinamet kolii delam barat tang shode bood moraghebe khodet bash nimvajabi </h1>
 
-
-
+     
+  
 </body>
-
-
 </html>
